--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ li {
     justify-content: space-between;
     align-items: center;
     padding: 1.25rem 2.625rem;
+    position: relative;
 }
 
 .text-28 {
@@ -39,7 +40,7 @@ li {
 }
 
 .text-20 {
-    font-weight: 400;
+    font-weight: 300;
     font-size: 1.25rem;
     line-height: 1.5rem;
     color: #FFFFFF;
@@ -48,6 +49,11 @@ li {
 .nav {
     display: flex;
     gap: 1.875rem;
+    position: absolute;
+    z-index: 1;
+    top: 28px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .text-24 {
@@ -77,7 +83,7 @@ li {
     gap: 1.063rem;
 }
 
-.main-header {
+.main-title {
     font-size: 3.375rem;
     font-weight: 500;
     line-height: 3.5rem;
@@ -85,6 +91,23 @@ li {
     color: #FFFFFF;
     text-align: center;
     text-transform: uppercase;
+}
+
+.marker{
+    position: relative;
+    z-index: 0;
+}
+.marker::before{
+    position: absolute;
+    content: '';
+    width: 334px;
+    height: 28px;
+    background-image: url(../images/marker.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    bottom: -10px;
+    left: 0;
+    z-index: -1;
 }
 
 .text-32 {
@@ -95,15 +118,22 @@ li {
     line-height: 2.125rem;
 }
 
-.btn-green {
+.btn {
     background-color: #028164;
     border-radius: 8px;
     padding: 1.125rem 2.5rem;
     display: flex;
     gap: 1.25rem;
+    align-items: baseline;
 }
 
+.btn .btn-text {
+    font-weight: 300;
+}
 
+.btn img {
+    width: 30px;
+}
 
 
 
@@ -190,11 +220,8 @@ li {
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
-}
-
-.about-info-container {
-    display: flex;
-    gap: 0.438rem;
+    border-left: 3px solid #028164;
+    padding-left: 0.625rem;
 }
 
 .vertical-line {
@@ -207,6 +234,7 @@ li {
     font-size: 1.25rem;
     font-weight: 600;
     letter-spacing: 0.01em;
+    line-height: 90%;
 }
 
 .about-info_text {
@@ -242,6 +270,7 @@ li {
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    width: 32%;
 }
 
 .project-card-container {
@@ -269,14 +298,15 @@ li {
     font-weight: 500;
 }
 
-.project-card-bg {
+.project-card-container:nth-child(even) {
     background-color: #EFEFEF;
+    border-radius: 8px;
 }
 
 .project-container-gap {
     display: flex;
     flex-direction: column;
-    gap: 1.875rem;
+    /* gap: 1.875rem; */
 }
 
 .project-container {
@@ -303,6 +333,37 @@ li {
 
 .text-24-green {
     color: #028164;
+}
+
+.swipers-container {
+    width: 66%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.swiper-wrapper {
+    display: flex;
+}
+
+.swiper-slide {
+    font-size: 0;
+    max-width: 892px;
+}
+
+.swiper-thumbs .swiper-slide {
+    width: calc(20% - 13px) !important;
+    opacity: 0.4;
+}
+
+.swiper-slide-thumb-active {
+    opacity: 1 !important;
+}
+
+.swiper-slide img {
+    width: 100%;
+    border-radius: 14px;
+  
 }
 
 
