--- a/css/style.css
+++ b/css/style.css
@@ -641,3 +641,24 @@ footer {
     color: #028164;
     text-decoration: underline;
 }
+
+
+
+.gallery {
+    display: flex;
+    flex-direction: column;
+    padding: 6.25rem 2.625rem;
+    gap: 3.75rem;
+}
+
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 2.25rem;
+}
+
+.gallery-container img {
+    width: 30%;
+    border-radius: 14px;
+}
