--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ section,
     flex-direction: column;
     align-items: center;
     gap: 1.813rem;
-    padding: 286px 290px;
+    padding: 17.875rem 18.125rem;
 }
 
 .hero-text {
@@ -163,7 +163,7 @@ section,
 }
 
 
-
+/****** О домах *******/
 
 .info {
     display: flex;
@@ -190,7 +190,7 @@ section,
 .info-card {
     background-color: #EFEFEF;
     border-radius: 12px;
-    width: 20%;
+    width: 23%;
     padding: 1.5rem 1.75rem;
     display: flex;
     gap: 1rem;
@@ -212,7 +212,7 @@ section,
 }
 
 
-
+/****** О нас *******/
 
 
 .about {
@@ -220,10 +220,10 @@ section,
     background-color: #EFEFEF;
     padding: 6.25rem 2.625rem;
     gap: 2.375rem;
+    width: 100%;
 }
 
 .about-container {
-    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -231,7 +231,7 @@ section,
 }
 
 .about-img {
-    width: 660px;
+    max-width: 100%;
 }
 
 .align-left {
@@ -242,6 +242,7 @@ section,
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    width: 45%;
 }
 
 .about-info {
@@ -273,7 +274,7 @@ section,
     letter-spacing: 0.01em;
 }
 
-
+/****** Проекты *******/
 
 
 .projects {
@@ -287,6 +288,7 @@ section,
 .projects-container {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .project-card {
@@ -355,6 +357,10 @@ section,
     padding-bottom: 5rem;
 }
 
+.swiper img {
+    max-width: 100%;
+}
+
 .btn-white {
     border: #028164 2px solid;
     background-color: #FFFFFF;
@@ -401,7 +407,7 @@ section,
 
 
 
-
+/****** Почему мы? *******/
 
 
 .green-bg {
@@ -441,7 +447,7 @@ section,
     display: flex;
     flex-wrap: wrap;
     gap: 2.25rem;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .about-us-card {
@@ -451,7 +457,7 @@ section,
 }
 
 
-
+/****** Оставить заявку *******/
 
 
 .contacts {
@@ -459,12 +465,18 @@ section,
     align-items: center;
     padding: 6.25rem 2.625rem;
     justify-content: space-between;
+    width: 100%;
+}
+
+.contacts img {
+    width: 65%;
 }
 
 .form-container {
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    width: 30%;
 }
 
 .form {
