--- a/css/media.css
+++ b/css/media.css
@@ -53,6 +53,7 @@
 
     .map-container {
         left: 35%;
+        gap: 1.5rem;
     }
 }
 
@@ -134,6 +135,26 @@
     .info-container .info-card {
         width: 43%;
     }
+
+    .map-container-list img {
+        width: 14px;
+        height: 14px;
+    }
+
+    .map-container-list {
+        align-items: center;
+    }
+
+    .map-container {
+        gap: 0.8rem;
+        width: 50%;
+        left: 31%;
+    }
+
+    .map-text {
+        font-size: 1rem;
+        line-height: 1.2rem;
+    }
 }
 
 @media screen and (max-width: 570px) {
@@ -211,6 +232,19 @@
     .footer-menu {
         flex-wrap: wrap;
         gap: 2rem;
+    }
+
+    .map-text {
+        font-size: 0.8rem;
+        line-height: 1rem;
+    }
+
+    .map-container {
+        padding: 0.7rem;
+        gap: 0.5rem;
+        width: 62%;
+        left: 37%;
+        top: 49%;
     }
 }
 
