--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ section,
 /***** hero *****/
 
 .bg-hero {
-    background-image: url(../images/hero.png);
+    background-image: url(../images/hero1.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -219,7 +219,7 @@ section,
     display: flex;
     background-color: #EFEFEF;
     padding: 6.25rem 2.625rem;
-    gap: 2.375rem;
+    gap: 2.25rem;
     width: 100%;
 }
 
@@ -227,7 +227,14 @@ section,
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2.375rem;
+    gap: 1.5rem;
+    width: 50%;
+    transform: translateY(-24px);
+}
+.about-info-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
 .about-img {
@@ -242,13 +249,13 @@ section,
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
-    width: 45%;
+    width: 48%;
 }
 
 .about-info {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.6rem;
     border-left: 3px solid #028164;
     padding-left: 0.625rem;
 }
@@ -260,7 +267,7 @@ section,
 
 .green-text {
     color: #028164;
-    font-size: 1.25rem;
+    font-size: 1.125rem;
     font-weight: 600;
     letter-spacing: 0.01em;
     line-height: 90%;
@@ -268,7 +275,7 @@ section,
 
 .about-info_text {
     color: #000000;
-    font-size: 1rem;
+    font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.188rem;
     letter-spacing: 0.01em;
