--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,7 @@ section,
     width: 50%;
     transform: translateY(-24px);
 }
+
 .about-info-wrapper {
     display: flex;
     flex-direction: column;
@@ -528,8 +529,9 @@ input[type="number"]::placeholder {
     font-weight: 300;
 }
 
-span.check {
+a.check {
     text-decoration: underline;
+    color: #000000;
 }
 
 .check-container {
@@ -661,7 +663,7 @@ footer {
     text-decoration: underline;
 }
 
-
+/******* СТРАНИЦА ГАЛЕРЕЯ ********/
 
 .gallery {
     display: flex;
@@ -677,7 +679,80 @@ footer {
     gap: 2.25rem;
 }
 
-.gallery-container img {
+.gallery-item {
     width: 30%;
     border-radius: 14px;
+    cursor: pointer;
+}
+
+.popup-image {
+    position: fixed;
+    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(227, 227, 227, 0.8);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-hidden {
+    display: none !important;
+}
+
+.popup-image-wrapper {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.popup-image-wrapper span {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    font-size: 4.5rem;
+}
+
+.arrow {
+    width: 30%;
+    height: 100%;
+    font-size: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+}
+
+.popup-image-wrapper img {
+    max-width: 60%;
+}
+
+.arrow {
+    width: 30%;
+    height: 100%;
+    font-size: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+}
+
+#close {
+    cursor: pointer;
+}
+
+
+
+.policy {
+    display: flex;
+    flex-direction: column;
+    padding: 6.25rem 2.625rem;
+    gap: 3.75rem;
+    align-items: center;
 }
