--- a/css/media.css
+++ b/css/media.css
@@ -1,11 +1,32 @@
-@media (max-width: 1024px) {
-
-    .nav {
-        transform: translateX(-77%);
+@media (max-width: 1400px) {
+    .about {
+        flex-direction: column-reverse;
+    }
+    .about-container,
+    .about-container-text {
+        width: 100%;
     }
 
-    .marker::before {
-        transform: translateX(-100%);
+    .about-container-text h2 {
+        text-align: center;
+    }
+    .about-container-text{
+        gap: 3.75rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    header {
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 2rem;
+    }
+    .nav {
+        position: static;
+        transform: none;
+    }
+    .nav .text-20 {
+        font-size: 1rem;
     }
 
     .info-container {
@@ -27,11 +48,16 @@
     }
 
     .contacts img {
-        width: 100%;
+        display: none;
     }
 
     .project-card {
-        flex-direction: column;
+        flex-direction: column-reverse !important;
+    }
+
+    .swiper-slide {
+        font-size: 0;
+        max-width: 940px;
     }
 
     .project-card-list,
@@ -62,15 +88,11 @@
 }
 
 @media (max-width: 790px) {
-    .nav {
-        left: 68%;
-        transform: translateX(-50%);
-    }
 
-    .header {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 0.5rem;
+    .header .nav {
+        width: 100%;
+        justify-content: center;
+        order: 3;
     }
 
     .main-title {
@@ -166,13 +188,25 @@
 }
 
 @media screen and (max-width: 570px) {
+    section, .footer-container {
+        padding: 3rem 1.25rem;
+    }
+
     .header {
-        gap: 2.5rem;
+        padding: 1.25rem;
+        gap: 0.5rem;
+    }
+
+    .logo {
+        font-size: 1.25rem;
     }
 
     .nav {
         left: 52%;
         top: 60px;
+    }
+    .nav-social a img {
+        width: 24px;
     }
 
     .hero {
@@ -180,18 +214,13 @@
     }
 
     .main-title {
-        font-size: 1.5rem;
+        font-size: 1.75rem;
         line-height: 1.7rem;
     }
 
     .text-32 {
-        font-size: 1.2rem;
+        font-size: 1rem;
         line-height: 1.4rem;
-    }
-
-    .marker::before {
-        transform: translateX(-83%);
-        bottom: -25px;
     }
 
     .text-42 {
@@ -257,6 +286,15 @@
 
     .gallery-item {
         width: 100%;
+    }
+    .swiper-slide img {
+        border-radius: 8px;
+    }
+    .swipers-container {
+        gap: 0.5rem;
+    }
+    .swiper-thumbs .swiper-slide {
+        width: calc(20% - 6.5px) !important;
     }
 }
 
