--- a/css/style.css
+++ b/css/style.css
@@ -110,19 +110,11 @@ section,
 .marker {
     position: relative;
     z-index: 0;
-}
-
-.marker::before {
-    position: absolute;
-    content: '';
-    width: 334px;
-    height: 28px;
     background-image: url(../images/marker.png);
     background-size: contain;
     background-repeat: no-repeat;
-    bottom: -10px;
-    left: 0;
-    z-index: -1;
+    background-position-y: 80%;
+    padding-bottom: 20px;
 }
 
 .text-32 {
@@ -239,7 +231,7 @@ section,
 }
 
 .about-img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .align-left {
@@ -293,16 +285,20 @@ section,
     align-items: center;
 }
 
-.projects-container {
+.project-cards-wrapper {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    gap: 6rem;
 }
 
 .project-card {
     display: flex;
     gap: 2.25rem;
     justify-content: space-between;
+    width: 100%;
+}
+.project-card:nth-child(odd) {
+    flex-direction: row-reverse;
 }
 
 .project-card-list {
@@ -359,10 +355,6 @@ section,
     flex-direction: column;
     align-items: center;
     gap: 1.875rem;
-}
-
-.project-card-padding {
-    padding-bottom: 5rem;
 }
 
 .swiper img {
@@ -478,6 +470,7 @@ section,
 
 .contacts img {
     width: 65%;
+    border-radius: 14px;
 }
 
 .form-container {
@@ -499,6 +492,7 @@ section,
     background-color: #EFEFEF;
     border: 0 solid #EFEFEF;
     padding: 0.625rem;
+    border-radius: 8px;
 }
 
 input[type="text"]::placeholder,
@@ -680,9 +674,11 @@ footer {
 }
 
 .gallery-item {
-    width: 30%;
+    width: 31.3%;
     border-radius: 14px;
     cursor: pointer;
+    flex-shrink: 1;
+    flex-grow: 1;
 }
 
 .popup-image {
@@ -695,6 +691,7 @@ footer {
     background: rgba(227, 227, 227, 0.8);
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 .popup-hidden {
