--- a/css/style.css
+++ b/css/style.css
@@ -619,9 +619,9 @@ footer {
     background-color: #FFFFFF;
     border-radius: 14px;
     padding: 1.25rem;
-    top: 50%;
-    left: 20%;
-    transform: translate(-50%, -50%);
+    top: 162px;
+    left: 42px;
+    transform: translate(0);
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
@@ -632,7 +632,7 @@ footer {
     gap: 0.5rem;
 }
 
-.map img {
+.map-img {
     width: 100%;
 }
 
