--- a/css/media.css
+++ b/css/media.css
@@ -170,10 +170,28 @@
         align-items: center;
     }
 
+    .map {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .desktop-map {
+        display: none;
+    }
+    .mobile-map {
+        display: block;
+    }
+
     .map-container {
-        gap: 0.8rem;
-        width: 50%;
-        left: 31%;
+        padding: 2rem 2.625rem;
+        gap: 1rem;
+        position: static;
+        top: unset;
+        left: unset;
+        transform: none;
+        width: 100%;
+        border-radius: none;
+    
     }
 
     .map-text {
@@ -270,17 +288,13 @@
         gap: 2rem;
     }
 
+    .map-container {
+        padding: 2rem 1.25rem;
+    }
+
     .map-text {
         font-size: 0.8rem;
         line-height: 1rem;
-    }
-
-    .map-container {
-        padding: 0.7rem;
-        gap: 0.5rem;
-        width: 62%;
-        left: 37%;
-        top: 49%;
     }
 
     .gallery-item {
