--- a/css/style.css
+++ b/css/style.css
@@ -651,13 +651,14 @@ footer {
     transform: translate(0);
     display: flex;
     flex-direction: column;
-    gap: 2.5rem;
+    gap: 2rem;
     transform: translateY(-50%);
 }
 
 .map-container-list {
     display: flex;
     gap: 0.5rem;
+    align-items: center;
 }
 
 .map-img {
