form handle and small changes

--- a/css/media.css
+++ b/css/media.css
@@ -333,6 +333,10 @@
     .map {
         padding: 0;
     }
+
+    .project-card-container__price .project-card-title:first-child {
+        font-size: 1rem;
+    }
 }
 
 @media (max-width: 376px) {}
